# AndroidLearn

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
ApkUpdateDemo/: build.gradle
ApkUpdateDemo/src/main/: AndroidManifest.xml
BasicUIDemo/: build.gradle
BasicUIDemo/src/main/: AndroidManifest.xml
CameraLib/: build.gradle
CameraLib/src/main/: AndroidManifest.xml
JavaAssistDemo/: build.gradle  settings.gradle
JavaAssistDemo/app/: build.gradle  proguard-rules.pro
JavaAssistDemo/common-lib/: build.gradle
JavaAssistDemo/fix-jar-plugin/: build.gradle
JavaAssistDemo/gradle/wrapper/: gradle-wrapper.properties
JavaDemo/: build.gradle
LanguageDemo/: build.gradle
LanguageDemo/src/main/: AndroidManifest.xml
RetrofitDemo/: build.gradle  proguard-rules.pro
RetrofitDemo/src/main/: AndroidManifest.xml
audiorecorddemo/: build.gradle
audiorecorddemo/src/main/: AndroidManifest.xml
autovaluedemo/: build.gradle
autovaluedemo/src/main/: AndroidManifest.xml
camerademo/: build.gradle
databasedemo/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
grpcdemo/: build.gradle  proguard-rules.pro
jnidemo/: build.gradle
jnidemo/jni/: Android.mk  Application.mk
jnidemo/src/main/cpp/: CMakeLists.txt  com_chihun_learn_jnidemo_JNIDataLearn.cpp  com_chihun_learn_jnidemo_JNIDataLearn.h  com_chihun_learn_jnidemo_JNIDataLearn_InstanceHolder.h  com_chihun_learn_jnidemo_JNIExceptionLearn.cpp  com_chihun_learn_jnidemo_JNIExceptionLearn.h
jsondemo/: build.gradle  proguard-rules.pro
providerdemo/: build.gradle
servicedemo/: build.gradle
(+208 files in other folders)
